--- a/.github/workflows/__config-input.yml
+++ b/.github/workflows/__config-input.yml
@@ -32,7 +32,7 @@ jobs:
     name: Config input
     permissions:
       contents: read
-      security-events: write
+      security-events: read
     timeout-minutes: 45
     runs-on: ${{ matrix.os }}
     steps:
