--- a/.github/workflows/codescanning-config-cli.yml
+++ b/.github/workflows/codescanning-config-cli.yml
@@ -26,7 +26,7 @@ jobs:
     permissions:
       contents: read
       packages: read
-      security-events: write
+      security-events: read
 
     strategy:
       fail-fast: false
