Add extra permission to mergeback workflow

--- a/.github/workflows/post-release-mergeback.yml
+++ b/.github/workflows/post-release-mergeback.yml
@@ -29,6 +29,7 @@ jobs:
 
     permissions:
       contents: write # needed to create tags and push commits
+      pull-requests: write
 
     steps:
       - name: Dump environment
