--- a/.github/workflows/update-supported-enterprise-server-versions.yml
+++ b/.github/workflows/update-supported-enterprise-server-versions.yml
@@ -22,12 +22,9 @@ jobs:
           python-version: "3.7"
       - name: Checkout CodeQL Action
         uses: actions/checkout@v4
-      - name: Checkout Enterprise Releases
-        uses: actions/checkout@v4
-        with:
-          repository: github/enterprise-releases
-          ssh-key: ${{ secrets.ENTERPRISE_RELEASES_SSH_KEY }}
-          path: ${{ github.workspace }}/enterprise-releases/
+      - name: Get Enterprise Server Versions
+        id: get-versions
+        uses: github/enterprise-releases/actions/maintained_features@master
       - name: Update Supported Enterprise Server Versions
         run: |
           cd ./.github/workflows/update-supported-enterprise-server-versions/
@@ -37,7 +34,7 @@ jobs:
           rm --recursive "$ENTERPRISE_RELEASES_PATH"
           npm run build
         env:
-          ENTERPRISE_RELEASES_PATH: ${{ github.workspace }}/enterprise-releases/
+          MAINTAINED_RELEASES: ${{ steps.get-versions.outputs.maintained_releases }}
 
       - name: Update git config
         run: |
