--- a/pr-checks/checks/rubocop-multi-language.yml
+++ b/pr-checks/checks/rubocop-multi-language.yml
@@ -5,7 +5,7 @@ operatingSystems: ["ubuntu"]
 versions: ["default"]
 steps:
   - name: Set up Ruby
-    uses: ruby/setup-ruby@v1
+    uses: ruby/setup-ruby@2654679fe7f7c29875c669398a8ec0791b8a64a1 # v1.215.0
     with:
       ruby-version: 2.6
   - name: Install Code Scanning integration
