--- a/.github/workflows/update-supported-enterprise-server-versions.yml
+++ b/.github/workflows/update-supported-enterprise-server-versions.yml
@@ -14,6 +14,7 @@ jobs:
     permissions:
       contents: write # needed to push commits
       pull-requests: write # needed to create pull request
+      actions: write
 
     steps:
       - name: Setup Python
