--- a/pr-checks/justfile
+++ b/pr-checks/justfile
@@ -1,6 +1,1 @@
-# Perform all necessary steps to update the PR checks
-update-pr-checks:
-    python3 -m venv env
-    source env/bin/activate
-    pip3 install ruamel.yaml
-    python3 sync.py
+set fallback := true
