--- a/.github/actions/check-codescanning-config/action.yml
+++ b/.github/actions/check-codescanning-config/action.yml
@@ -53,6 +53,7 @@ runs:
         db-location: ${{ runner.temp }}/codescanning-config-cli-test
       env:
         CODEQL_ACTION_TEST_MODE: 'true'
+        EXPECTED_CONFIG_FILE_CONTENTS: ${{ inputs.expected-config-file-contents }}
 
     - name: Install dependencies
       shell: bash
@@ -61,7 +62,7 @@ runs:
     - name: Check config
       working-directory: ${{ github.action_path }}
       shell: bash
-      run: ts-node ./index.ts "${{ runner.temp }}/user-config.yaml" '${{ inputs.expected-config-file-contents }}'
+      run: ts-node ./index.ts "${{ runner.temp }}/user-config.yaml" '$EXPECTED_CONFIG_FILE_CONTENTS'
 
     - name: Clean up
       shell: bash
@@ -69,3 +70,5 @@ runs:
       run: |
         rm -rf ${{ runner.temp }}/codescanning-config-cli-test
         rm -rf ${{ runner.temp }}/user-config.yaml
+        rm -rf $RUNNER_TEMP/codescanning-config-cli-test
+        rm -rf $RUNNER_TEMP/user-config.yaml
