--- a/.github/workflows/post-release-mergeback.yml
+++ b/.github/workflows/post-release-mergeback.yml
@@ -168,7 +168,7 @@ jobs:
             --draft
 
       - name: Generate token
-        uses: actions/create-github-app-token@0d564482f06ca65fa9e77e2510873638c82206f2
+        uses: actions/create-github-app-token@v1.11.5
         id: app-token
         with:
           app-id: ${{ vars.AUTOMATION_APP_ID }}
