--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "js-yaml": "^4.1.0",
     "jsonschema": "1.4.1",
     "long": "^5.3.1",
+    "macos-version": "^6.0.0",
     "node-forge": "^1.3.1",
     "octokit": "^4.1.2",
     "path": "^0.12.7",
