--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@schemastore/package": "0.0.10",
     "@types/node-forge": "^1.3.11",
     "@types/uuid": "^10.0.0",
-    "adm-zip": "^0.5.16",
+    "archiver": "^7.0.1",
     "check-disk-space": "^3.4.0",
     "console-log-level": "^1.4.1",
     "del": "^6.1.1",
@@ -62,7 +62,7 @@
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.23.0",
     "@microsoft/eslint-formatter-sarif": "^3.1.0",
-    "@types/adm-zip": "^0.5.7",
+    "@types/archiver": "^6.0.3",
     "@types/console-log-level": "^1.4.5",
     "@types/follow-redirects": "^1.14.4",
     "@types/get-folder-size": "^2.0.0",
