--- a/pr-checks/checks/quality-queries.yml
+++ b/pr-checks/checks/quality-queries.yml
@@ -11,11 +11,17 @@ steps:
     with:
       output: "${{ runner.temp }}/results"
       upload-database: false
-  - name: Upload SARIF
+  - name: Upload security SARIF
     uses: actions/upload-artifact@v4
     with:
       name: config-export-${{ matrix.os }}-${{ matrix.version }}.sarif.json
       path: "${{ runner.temp }}/results/javascript.sarif"
+      retention-days: 7
+  - name: Upload quality SARIF
+    uses: actions/upload-artifact@v4
+    with:
+      name: config-export-${{ matrix.os }}-${{ matrix.version }}.quality.sarif.json
+      path: "${{ runner.temp }}/results/javascript.quality.sarif"
       retention-days: 7
   - name: Check config properties appear in SARIF
     uses: actions/github-script@v7
