Check SARIF with quality results for expected configuration

--- a/.github/workflows/__quality-queries.yml
+++ b/.github/workflows/__quality-queries.yml
@@ -79,7 +79,7 @@ jobs:
       - name: Check config properties appear in SARIF
         uses: actions/github-script@v7
         env:
-          SARIF_PATH: ${{ runner.temp }}/results/javascript.sarif
+          SARIF_PATH: ${{ runner.temp }}/results/javascript.quality.sarif
         with:
           script: |
             const fs = require('fs');
