--- a/.github/workflows/update-proxy-release.yml
+++ b/.github/workflows/update-proxy-release.yml
@@ -87,6 +87,7 @@ jobs:
             Please do the following before merging:
 
             - [ ] Verify that the changes to the code are correct.
+            - [ ] Mark the PR as ready for review to trigger the CI.
           EOF
           )
 
