Use updated output API

--- a/.github/workflows/rebuild.yml
+++ b/.github/workflows/rebuild.yml
@@ -77,7 +77,7 @@ jobs:
             git add --all
             git commit -m "Rebuild"
             git push origin "HEAD:$BRANCH"
-            echo "::set-output name=changes::true"
+            echo "changes=true" >> $GITHUB_OUTPUT
           fi
 
       - name: Notify about rebuild
