--- a/.github/workflows/__rust.yml
+++ b/.github/workflows/__rust.yml
@@ -28,6 +28,10 @@ jobs:
       matrix:
         include:
           - os: ubuntu-latest
+            version: stable-v2.19.3
+          - os: ubuntu-latest
+            version: stable-v2.22.1
+          - os: ubuntu-latest
             version: linked
           - os: ubuntu-latest
             version: default
@@ -53,8 +57,6 @@ jobs:
         with:
           languages: rust
           tools: ${{ steps.prepare-test.outputs.tools-url }}
-        env:
-          CODEQL_ACTION_RUST_ANALYSIS: true
       - uses: ./../action/analyze
         id: analysis
         with:
