Add `workflow_call` triggers to PR checks

--- a/.github/workflows/__packaging-config-inputs-js.yml
+++ b/.github/workflows/__packaging-config-inputs-js.yml
@@ -21,6 +21,7 @@ on:
   schedule:
     - cron: '0 5 * * *'
   workflow_dispatch: {}
+  workflow_call: {}
 jobs:
   packaging-config-inputs-js:
     strategy:
