--- a/.github/workflows/__go-indirect-tracing-workaround-no-file-program.yml
+++ b/.github/workflows/__go-indirect-tracing-workaround-no-file-program.yml
@@ -21,6 +21,7 @@ on:
   schedule:
     - cron: '0 5 * * *'
   workflow_dispatch: {}
+  workflow_call: {}
 jobs:
   go-indirect-tracing-workaround-no-file-program:
     strategy:
