--- a/.github/workflows/__multi-language-autodetect.yml
+++ b/.github/workflows/__multi-language-autodetect.yml
@@ -21,6 +21,7 @@ on:
   schedule:
     - cron: '0 5 * * *'
   workflow_dispatch: {}
+  workflow_call: {}
 jobs:
   multi-language-autodetect:
     strategy:
