--- a/pr-checks/checks/go-tracing-custom-build-steps.yml
+++ b/pr-checks/checks/go-tracing-custom-build-steps.yml
@@ -1,5 +1,6 @@
 name: "Go: tracing with custom build steps"
 description: "Checks that Go tracing traces the build when using custom build steps"
+collection: go
 operatingSystems: ["ubuntu", "macos"]
 installGo: "true"
 steps:
