--- a/.github/workflows/__go.yml
+++ b/.github/workflows/__go.yml
@@ -11,7 +11,12 @@ on:
   push:
     paths:
       - .github/workflows/__go.yml
-  workflow_dispatch: {}
+  workflow_dispatch:
+    inputs:
+      go-version:
+        type: string
+        description: The version of Go to install
+        required: true
 jobs:
   go-custom-queries:
     name: 'Go: Custom queries'
@@ -19,39 +24,53 @@ jobs:
       contents: read
       security-events: read
     uses: ./.github/workflows/__go-custom-queries.yml
+    with:
+      go-version: ${{ inputs.go-version }}
   go-tracing-legacy-workflow:
     name: 'Go: tracing with legacy workflow'
     permissions:
       contents: read
       security-events: read
     uses: ./.github/workflows/__go-tracing-legacy-workflow.yml
+    with:
+      go-version: ${{ inputs.go-version }}
   go-indirect-tracing-workaround:
     name: 'Go: workaround for indirect tracing'
     permissions:
       contents: read
       security-events: read
     uses: ./.github/workflows/__go-indirect-tracing-workaround.yml
+    with:
+      go-version: ${{ inputs.go-version }}
   go-tracing-custom-build-steps:
     name: 'Go: tracing with custom build steps'
     permissions:
       contents: read
       security-events: read
     uses: ./.github/workflows/__go-tracing-custom-build-steps.yml
+    with:
+      go-version: ${{ inputs.go-version }}
   go-tracing-autobuilder:
     name: 'Go: tracing with autobuilder step'
     permissions:
       contents: read
       security-events: read
     uses: ./.github/workflows/__go-tracing-autobuilder.yml
+    with:
+      go-version: ${{ inputs.go-version }}
   go-indirect-tracing-workaround-diagnostic:
     name: 'Go: diagnostic when Go is changed after init step'
     permissions:
       contents: read
       security-events: read
     uses: ./.github/workflows/__go-indirect-tracing-workaround-diagnostic.yml
+    with:
+      go-version: ${{ inputs.go-version }}
   go-indirect-tracing-workaround-no-file-program:
     name: 'Go: diagnostic when `file` is not installed'
     permissions:
       contents: read
       security-events: read
     uses: ./.github/workflows/__go-indirect-tracing-workaround-no-file-program.yml
+    with:
+      go-version: ${{ inputs.go-version }}
