--- a/pr-checks/checks/go-custom-queries.yml
+++ b/pr-checks/checks/go-custom-queries.yml
@@ -1,6 +1,11 @@
 name: "Go: Custom queries"
 description: "Checks that Go works in conjunction with a config file specifying custom queries"
 collection: go
+inputs:
+  go-version:
+    type: string
+    description: "The version of Go to install"
+    required: true
 operatingSystems:
   - ubuntu
 versions:
