--- a/.github/workflows/__go-tracing-custom-build-steps.yml
+++ b/.github/workflows/__go-tracing-custom-build-steps.yml
@@ -25,13 +25,15 @@ on:
       go-version:
         type: string
         description: The version of Go to install
-        required: true
+        required: false
+        default: '>=1.21.0'
   workflow_call:
     inputs:
       go-version:
         type: string
         description: The version of Go to install
-        required: true
+        required: false
+        default: '>=1.21.0'
 jobs:
   go-tracing-custom-build-steps:
     strategy:
