--- a/.github/workflows/__go.yml
+++ b/.github/workflows/__go.yml
@@ -16,7 +16,8 @@ on:
       go-version:
         type: string
         description: The version of Go to install
-        required: true
+        required: false
+        default: '>=1.21.0'
 jobs:
   go-custom-queries:
     name: 'Go: Custom queries'
